--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,11 @@
 - Allow duplicate hostnames?
 
 - Icons for host status.
+
+- Re-order tools menu.
+
+- Clone existing tool.
+
+- Save column positions.
+
+- Don't automatically refresh.
