Added support for associating an environment and description with the hostname. Added validation of the mandatory host and tool fields when loading.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,6 +6,4 @@
 
 - Refactor App/Context menu building code into ExecuteToolCmd.
 
-- Switch to XML elements instead of attributes.
-
-- Support more host attributes, e.g. Environment, on/offline.
+- Support more host attributes, e.g. on/offline.
