Added section about releases to the ReadMe.

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,4 +6,8 @@
 
 - Switch Format combo to something user-friendly.
 
-- Add some query templates
+- Add some query templates.
+
+- View Services to start/stop them.
+
+- View processes to kill them.
