Changed the query runner so it returns #ERR for any query that generates an exception. This allows the remaining queries to run and only fail at a host level if a non-WMI exception occurs.

--- a/TODO.txt
+++ b/TODO.txt
@@ -11,3 +11,5 @@ For Later
 - Customisable values to monitor.
 
 - Configurable monitoring interval.
+
+- Investigate large values in processes view.
