--- a/TODO.txt
+++ b/TODO.txt
@@ -11,3 +11,5 @@ For Later
 - Configurable monitoring interval.
 
 - Investigate large values in processes view.
+
+- Tools can be configured to require confirmation first, e.g. restart
