--- a/TODO.txt
+++ b/TODO.txt
@@ -32,4 +32,16 @@ For Later
 
 - Minimise to the notification tray for background monitoring.
 
-- Provide balloon alerts / icon changes when minimised to the notification tray
+- Provide balloon alerts / icon changes when minimised to the notification tray.
+
+- Add Template for PageFile usage - Get-WmiObject Win32_PageFileUsage | select Name,PeakUsage.
+
+- Add formatting option for MB as GB, e.g. Win32_PageFileUsage.
+
+- Add non-full screen remote desktop template "mstsc /w 1440 /h 900 /v ${HOSTNAME}"
+
+- Add PowerShell remote template "powershell/pwsh -NoExit -C Enter-PSSession ${HOSTNAME}"
+
+- Document what the #VAL error means.
+
+- Add test option when defining a new query.
