Updated TODO list.

--- a/TODO.txt
+++ b/TODO.txt
@@ -39,3 +39,5 @@ For Later
 - Document what the #VAL error means.
 
 - Add test option when defining a new query.
+
+- Services / Processes dialog still shown even when access denied error reported.
