--- a/TODO.txt
+++ b/TODO.txt
@@ -18,9 +18,11 @@ For Later
 
 - Tools can be configured to require confirmation first, e.g. restart.
 
-- Allow queries to configure how NULL / #VAL is handled, e.g. CD-ROM drive with no disk mounted.
+- Allow queries to configure how NULL / #VAL is handled, e.g. CD-ROM drive with no disk mounted / formatting arrays as strings.
 
-- Handle arrays, e.g. IPAddress from Win32_NetworkAdapterConfiguration.
+- Toggle showing real WMI errors for values to aid in debugging queries.
+
+- Handle arrays, e.g. IPAddress from Win32_NetworkAdapterConfiguration / PowerManagementCapabilities from Win32_Battery.
 
 - Refresh automatically after editing the queries.
 
